fixed the tile misalignment

--- a/SRePS/css/main.css
+++ b/SRePS/css/main.css
@@ -187,9 +187,7 @@ div.higher
 	display:inline-block;
 	background: white;
 	height: 200px;
-	margin: 2pt 2pt 2pt 2pt;
-	border-bottom-right-radius: 10px;
-	transform: scale(1);
+	transform: scale(0.95);
 	z-index: 0;
 	cursor: pointer;
 	-webkit-box-shadow: 0px 0px 10px -1px rgba(0,0,0,0.2);
